test/ddc-spec/error/01-ErrorExp/56-ProjectTooManyArgs/Main.ds

module Main where

data Foo = Foo Int [x: Int, y: Text]

foo (f: Foo) = f.x
